{{$NEXT}}

0.25   2015-11-07

- This module would die when it couldn't turn a dependent module name into a
  distro. Now it outputs a diag() message and continues on.


0.24   2015-10-04

- When test_all_dependents() is called, deps are now sorted before testing.

- The prereqs log now tells shows you the "root" distribution when installing
  prereqs of prereqs. This makes it easier to figure out which dependent is
  pulling in some uninstallable module.


0.23   2015-10-04

- Use diag to print the name of each distribution before it is tested. This is
  helpful if a particular distro hangs during the build or test phases.


0.22   2015-08-21

- The test_all_dependents() sub now lets you pass a filter subroutine instead
  of an exclude regex. This is a lot simpler to implement in many cases.


0.21   2015-07-17

- If PERL_TEST_DM_CPAN_VERBOSE was true and Test::More had not been loaded in
  the process you would get an error. GH #9.


0.20   2014-08-31

- The use of MetaCPAN::Client was a bit broken. Patch by Sawyer X. PR #8.


0.19   2014-06-26

- Switched from the now deprecated MetaCPAN::API to the shiny new
  MetaCPAN::Client. Patch by Mickey. PR #7.


0.18   2014-05-04

- A distro which used Module::Build and ran no tests would be marked as
  failure. Fixed by Graham Knop.

- Under debug mode, the output from the CPAN module's init phase is no longer
  output via diag() calls. Patch by Graham Knop.

- Better handling of module prereqs which in turn share prereqs with the
  module we're installing. Patch by Graham Knop.


0.17   2013-07-13

- Packaging fixes so CPAN ignores our test corpus modules. Patch by Graham
  Knopp.


0.16   2013-07-13

- Distros where all tests are skipped or where no tests exist are considered
  as passing. Previously they were a failure. Fixed by Graham Knopp.

- Added some real tests. Written by Graham Knopp.


0.15   2013-05-13

- The change in 0.14 broke non-parallel testing in the test_modules()